[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="gameScenePlace" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="loosePanel" type="Panel" parent="CanvasLayer"]
editor/display_folded = true
visible = false
margin_left = 402.0
margin_top = 168.0
margin_right = 885.0
margin_bottom = 508.0

[node name="Label" type="Label" parent="CanvasLayer/loosePanel"]
margin_left = 134.0
margin_top = 87.0
margin_right = 334.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
text = "你输了，点击重开"

[node name="restartButton" type="Button" parent="CanvasLayer/loosePanel"]
margin_left = 156.0
margin_top = 168.0
margin_right = 303.0
margin_bottom = 214.0
custom_fonts/font = ExtResource( 2 )
text = "重开"

